examples/test/testpolicy12036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12036
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key21: value44
      key14: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value17
      podSelector:
        matchLabels:
          key44: value33
          key29: value35
          key37: value13
